# HP_protein_folding

./: 2D_animator.py  3D_animator.py  CMakeLists.txt  HP_model.cpp  HP_model.h  README.md  input2.txt  input3.txt  run.cpp  sequence_reader.cpp  sequence_reader.h
input/: input.txt  input2.txt  input3.txt
src/: HP_model.h  run.cpp  sequence_reader.cpp  sequence_reader.h
